# lpbf_map

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: Dependencies.md  defect_suite.md  naming_conventions.md  object_reference.md
examples/: 01_Material_Object.ipynb  02_ProcessParameters_Object.ipynb  03_MeltPool_Dimensions.ipynb  04_MeltPool_Thermal_Views.ipynb  05_Standard_Printability_Map.ipynb  06_Unconventional_Axes_Printability.ipynb  07_3D_Safe_Zone_Evolution.ipynb
src/lpbf_map/: __init__.py  materials.py  meltpool.py  meltpool_plots.py  parameters.py  printability.py  printability_plots.py  units.py
src/lpbf_map/database/: MoNbTaW.json  NiTi_Sheikh.json  Ti64.json  __init__.py
src/lpbf_map/defects/: __init__.py  keyhole_gan.py  keyhole_geometric.py  keyhole_king.py
src/lpbf_maps/: __init__.py  materials.py  meltpool.py  meltpool_plots.py  printability.py  printability_plots.py
src/lpbf_maps/database/: Al6061.json
src/lpbf_maps/defects/: balling.py  balling_yadroitsev.py  base.py  keyhole.py  lof.py  lof_depth_ratio.py
tests/: test_imports.py  test_materials.py  test_meltpool.py  test_parameters.py  test_printability.py
